syntax = "proto3";

option java_multiple_files = true;
option java_package = "ssd.assignment.communication.grpc";
option java_outer_classname = "DecentAuctionProto";
option objc_class_prefix = "DA";

package decentauction;

service NetworkServer {
  rpc ping(ProtoNode) returns (ProtoNode) {}

  rpc store(exampleRequest) returns (exampleReply){} // instructs a node to store a key-value pair

  rpc findNode(ProtoTarget) returns (FoundNode){} // returns information about the k nodes closest to the target id

  rpc findValue(ProtoTarget) returns (FoundValue){} // similar to the FIND_NODE RPC, but if the recipient has received a STORE for the given key, it just returns the stored value
}

message ProtoNode {
  string nodeIpAddress = 1;
  int32 nodePort = 2;
  bytes nodeId = 3;
}

message ProtoTarget {
  ProtoNode sendingNode = 1;
  bytes target = 2;
}

message FoundNode {
  ProtoNode foundNode = 1;
  int64 lastSeen = 2;
}

message FoundValue {

}

// Type of messages used in Kademlia protocol
message exampleRequest{
  string exampleString = 1;
}

message exampleReply{
  string exampleString = 1;
}
